--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Professional portfolio showcasing web development and design projects"
     />
-    <title>Portfolio Modern | Web Developer & Designer</title>
+    <title>Ramadhani | Web Developer & Designer</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
