--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Professional portfolio showcasing web development and design projects"
     />
-    <title>Ramadhani | Web Developer & Designer</title>
+    <title>Portfolio Modern | Web Developer & Designer</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -257,6 +257,21 @@
               <p>
                 Aplikasi sederhana untuk mendeteksi cuaca dan memberikan
                 prakiraan yang akurat.
+              </p>
+            </div>
+          </div>
+          <div class="project-card" data-aos="fade-up">
+            <div class="project-image">
+              <img src="assets/img/project6.jpg" alt="Robot Arm" />
+            </div>
+            <div class="project-content">
+              <h3>Robot Arm</h3>
+              <div class="project-tags">
+                <span class="project-tag">C</span>
+              </div>
+              <p>
+                Robot Arm yang dapat di gerakkan melalui web dan
+                hanya menggunakan servo untuk mengatur posisi secara akurat.
               </p>
             </div>
           </div>
