--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Professional portfolio showcasing web development and design projects"
     />
-    <title>Ramadhani | Web Developer & IoT Developer</title>
+    <title>Ramadhani | Web Developer & Designer</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -68,7 +68,6 @@
       <div class="container">
         <div class="hero-content">
           <div class="hero-text" data-aos="fade-right">
-            <div class="greeting">Welcome to my portfolio</div>
             <h1 class="hero-title">
               Hi, I'm Ramadhani
               <br>
@@ -262,7 +261,7 @@
           </div>
           <div class="project-card" data-aos="fade-up">
             <div class="project-image">
-              <img src="assets/img/project7.jpg" alt="Robot Arm" />
+              <img src="assets/img/project6.jpg" alt="Robot Arm" />
             </div>
             <div class="project-content">
               <h3>Robot Arm</h3>
