--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
         </button>
         <ul>
           <li>
-            <a href="#home" data-aos="fade-down" data-aos-delay="100">Home</a>
+            <a href="#home" data-aos="fade-up" data-aos-delay="100">Home</a>
           </li>
           <li>
-            <a href="#about" data-aos="fade-down" data-aos-delay="200">About</a>
+            <a href="#about" data-aos="fade-up" data-aos-delay="200">About</a>
           </li>
           <li>
-            <a href="#projects" data-aos="fade-down" data-aos-delay="300"
+            <a href="#projects" data-aos="fade-up" data-aos-delay="300"
               >Projects</a
             >
           </li>
           <li>
-            <a href="#contact" data-aos="fade-down" data-aos-delay="400"
+            <a href="#contact" data-aos="fade-up" data-aos-delay="400"
               >Contact</a
             >
           </li>
