--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       </div>
     </section>
 
-    <section id="about">
-      <div class="container">
+    <section>
+      <div class="container"  id="about">
         <div class="about-content">
           <div class="about-text">
             <h2>About Me</h2>
