--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects">
-      <div class="container">
+    <section>
+      <div class="container" id="projects">
         <h2 class="section-title">Featured Projects</h2>
         <div class="project-grid">
           <!-- Project cards dari kode sebelumnya tetap sama -->
