--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       </div>
     </section>
 
-    <section>
-      <div class="container"  id="about">
+    <section id="about">
+      <div class="container">
         <div class="about-content">
           <div class="about-text">
             <h2>About Me</h2>
@@ -175,8 +175,8 @@
     </section>
 
     <!-- Projects Section -->
-    <section>
-      <div class="container" id="projects">
+    <section id="projects">
+      <div class="container">
         <h2 class="section-title">Featured Projects</h2>
         <div class="project-grid">
           <!-- Project cards dari kode sebelumnya tetap sama -->
