--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <i class="fas fa-bars"></i>
         </button>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><button class="nav-button">Resume</button></li>
+          <li><a href="#home" class="nav-link">Home</a></li>
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#projects" class="nav-link">Projects</a></li>
+          <li><a href="#contact" class="nav-link">Contact</a></li>
+          <li><button class="nav-button nav-link">Resume</button></li>
         </ul>
       </div>
     </nav>
