--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
             <a href="https://www.tiktok.com/@silite.io" aria-label="Tiktok"><i class="fab fa-tiktok"></i></a>
             <a href="https://www.instagram.com/nurramdhnii_/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/sliteio" aria-label="Github"><i class="fab fa-github"></i></a>
+            <a href="https://wa.me/6282335120455" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
       </div>
